Fixed: Annotation editing window has correct z-index

--- a/source/css/plugins/annotate.less
+++ b/source/css/plugins/annotate.less
@@ -26,6 +26,7 @@
   //  padding: 1em;
   .pretty-shadow(2px);
   border: 1px solid #CCCCCC;
+  z-index: 99999;
 }
 
 .diva-annotate-window-form {
